--- a/formularz_katana.html
+++ b/formularz_katana.html
@@ -83,6 +83,7 @@
         <button type="submit">Wyślij</button>
         <button type="reset">Wyczyść</button>
         <button type="button" onclick="window.location.reload();"><a href="index.html"> Zamknij </a></button>
-    </form>
+        <p>Autor:Szymon Katana</p>
+   </form>
 </body>
 </html>
