--- a/formularz_katana.html
+++ b/formularz_katana.html
@@ -82,7 +82,7 @@
         <!-- Buttons -->
         <button type="submit">Wyślij</button>
         <button type="reset">Wyczyść</button>
-        <button type="button" onclick="window.location.reload();"><a href="index.html"> Zamknij </a></button>
+        <button type="button" onclick="window.location.reload();"><a href="iindex.html"> Zamknij </a></button>
         <p>Autor:Szymon Katana</p>
    </form>
 </body>
