--- a/poczta_katana.html
+++ b/poczta_katana.html
@@ -7,6 +7,6 @@
     </head>
     <body>
      <A href ="mailto:buraczek_tv@o2.pl"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSKfYyeUNY_QpgptUIC1Yc5BvZ4Uj1wX3WHBA&s " border=0 width=70 height=50>moja poczta </A>
-     <A href ="index.html">wróć </A>
+     <A href ="iindex.html">wróć </A>
 </body>
    </html>
