--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     </style>
   </head>
   <body>
+    <link rel="icon" href="ikonka.png" type="image/png">
     <table border="1">
       <tr>
         <td colspan="3">
