--- a/poboczne_katana.html
+++ b/poboczne_katana.html
@@ -1,9 +1,41 @@
-<html>
- <head>
- <meta charset="utf-8">
- </head>
-<body>
- <h1 align="center">LOGO-Katana<br>Gdańsk, 22-11-2024</h1>
+<!DOCTYPE html>
+<html lang="pl">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Fajna strona</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin-top: 50px;
+        }
 
+        .container {
+            border: 2px solid black;
+            display: inline-block;
+            padding: 20px;
+        }
+
+        .name {
+            font-size: 24px;
+            font-weight: bold;
+            font-style: italic;
+            color: pink;
+        }
+
+        .subtitle {
+            font-size: 20px;
+            font-weight: bold;
+            color: lightblue;
+            font-style: italic;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <div class="name">Katana</div>
+        <div class="subtitle">Fajna strona</div>
+    </div>
 </body>
 </html>
