--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
         </td>
       </tr>
     </table>
-  <script type="text/javascript" src="//www.licznikodwiedzin.pl/cnt/start.php?key=297017562"></script>
+  <!-- www.DarmowyLicznik.pl -->
+<div class="image-rotator"><div class="rotator-slide" id="rotator-slide-1"><a href="https://www.darmowylicznik.pl/" title="Przejdź na stronę licznika" target="_blank"><img src="https://www.darmowylicznik.pl/licznik.php?id=147912" alt="Darmowy licznik odwiedzin" style="border:0px;" /></a></div></div>
+<!-- END www.DarmowyLicznik.pl -->
 </body>
 </html>
