--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         margin: 0 auto;
       }
     </style>
-   <link rel="icon" href="ikonka.png" type="image/png">
+   <link rel="icon" sizes="32x32" href="ikonka.png" type="image/png">
   </head>
   <body>
     <table border="1">
