--- a/plik_katana.html
+++ b/plik_katana.html
@@ -8,6 +8,6 @@
 <body>
     <h1>Pobierz plik</h1>
     <a href="plik.zip" download>Pobierz plik</a>
-    <a href="index.html">Wróć</a>
+    <a href="iindex.html">Wróć</a>
 </body>
 </html>
