--- a/stopa.html
+++ b/stopa.html
@@ -5,6 +5,18 @@
 <body>
  <h1 align="center">Katana,1P,22-11-2024</h1>
  <marquee bgcolor="red">Szymon Katana</marquee>
- <h3 align="center"><b>Layout</b>(interfejs strony internetowej) – element konstrukcji graficznej, w którym ustala się:
+    <h1>Layout</h1>
+    <p><strong>(interfejs strony internetowej)</strong> – element konstrukcji graficznej, w którym ustala się:</p>
+    <ol>
+        <li>rozmieszczenie elementów (treści) na stronie,</li>
+        <li>wygląd (kolorystykę, elementy dekoracyjne, krój czcionki).</li>
+    </ol>
+
+    <h2>Popularne technologie Layoutu dla stron WWW</h2>
+    <ol>
+        <li>w oparciu o tabele (<code>iframe</code>) lub ramy (<code>frame</code>),</li>
+        <li>w oparciu o DIV'y,</li>
+        <li>w oparciu o instrukcje HTML5 (<code>nav</code>, …).</li>
+    </ol>
 </body>
 </html>
