--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
    <link rel="icon" sizes="32x32" href="ikon.png" type="image/png">
   </head>
   <body>
+   <body bgcolor="green">
     <table border="1">
       <tr>
         <td colspan="3">
