--- a/index.html
+++ b/index.html
@@ -66,6 +66,6 @@
         </td>
       </tr>
     </table>
-<script type="text/javascript" src="//www.licznikodwiedzin.pl/cnt/start.php?key=733063512"></script>
+<script type = "text/javascript" src = "//www.deszczowce.pl/licznik/licznik.php?id=125230642"></script>
 </body>
 </html>
